k8s/app-manifest/j26-cms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-cms
  template:
    metadata:
      labels:
        app: j26-cms
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: j26-cms-app
          image: ghcr.io/scouterna/j26-cms:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: uploads
              mountPath: "/app/media"
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-cms-kv-csi
        - name: uploads
          persistentVolumeClaim:
            claimName: j26-cms-uploads
