k8s/app-manifest/j26-cms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-cms
spec:
  selector:
    app: j26-cms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
